<resources>
    <string name="app_name">Pulse</string>
    <string name="default_notification_channel_id" translatable="false">pulse_channel</string>
    <string name="common_okButton">OK</string>
    <string name="error_networkErrorMessage">Ошибка соединения</string>
    <string name="error_errorGettingData">Ошибка получения данных</string>
    <string name="error_serverNotResponding">Сервер не отвечает</string>
    <string name="onboarding_title_1">Все в одном месте</string>
    <string name="onboarding_subtitle_1">Нужно обезболивающее, вата и бинт?\nЗакажите все</string>
    <string name="onboarding_title_2">@string/delivery</string>
    <string name="onboarding_subtitle_2">Впервые стала возможна доставка\nрецептурных препаратов</string>
    <string name="onboarding_title_3">Чат с медиком</string>
    <string name="onboarding_subtitle_3">Неуверенны какое лучше лекарство\nприобрести? Спросите в чате у медика!</string>
    <string name="phoneHint">+7(•••) •••-••-••</string>
    <string name="MinLengthIsCharacters">Минимальная длина номера 11 цифр</string>
    <string name="nameErrorAuth">Имя должно содержать от 2 до 12 букв</string>
    <string name="phoneErrorAuth">Ой! Это не похоже на номер телефона</string>
    <string name="emailErrorAuth">Ой: Кажется это не похоже на имейл адрес</string>
    <string name="dontHaveAnAccountAuth">Еще нет аккаунта?</string>
    <string name="registrationAuth">Зарегистрируйтесь</string>
    <string name="proceedAuth">Далее</string>
    <string name="welcomeBackAuth">С возвращением!</string>
    <string name="pleaseAuth">Для создания аккаунта, укажите Ваше имя, номер телефона и имейл ( по желанию )</string>
    <string name="accountCreationAuth">Давайте начнем !</string>
    <string name="yourName">Ваше имя*</string>
    <string name="emailHintAuth">Email для уведомлений о статусе заказа</string>
    <string name="orSignInWithAuth">Или войдите с помощью</string>
    <string name="enterTheCode">Введите код</string>
    <string name="tokenIsEmpty">Ошибка запроса</string>
    <string name="smsResendAgain">СМС отправленно успешно !</string>
    <string name="signIn">Войти</string>
    <string name="signUp">Регистрация</string>
    <string name="orSignInVia">Или войти с помощью</string>
    <string name="enterCode">Пожалуйста, введите проверочный код, который мы отправили на</string>
    <string name="codeConfirmation">Подтверждение номера</string>
    <string name="codeIsNotReceived">Не получили код?</string>
    <string name="imageTextLogo">лого</string>
    <string name="googleContentDescriptionSignUp">Sign in via Google account</string>
    <string name="registerButtonContentDescriptionSignUp">Register image button</string>
    <string name="facebookContentDescriptionSignUp">Sign in via Facebook</string>
    <string name="scanDrugsContentDescription">Сканировать товар</string>
    <string name="skip">Пропустить</string>
    <string name="alreadyHaveAnAccount">Уже есть аккаунт?</string>
    <string name="backToSignIn">Войдите</string>
    <string name="signInSubTitle">Что бы войти в систему, введите зарегестрированный номер телефона</string>
    <string name="authPhoneHint">+7 (•••) •••–••–••*</string>
    <string name="authPhoneDebugHint">+3 (•••) •••–••–••*</string>
    <string name="authCustomerWithThisPhoneNumber">Пользователь с таким номером телефона не найдет, проверте правильность ввода или зарегестрируйтесь</string>
    <string name="authCustomerAlreadyExist">Пользователь с таким номером телефона уже существует, проверте правильность ввода или войдите</string>
    <string name="authEnteredValueNotValid">Введен некорректный номер телефона</string>
    <string name="authErrorEnteredValue">Ошибка авторизации. Проверьте правильность ввода и повторите попытку</string>
    <string name="notFoundCurrentlyUnavailable">Этот продукт на данный момент недоступен</string>
    <string name="menuTitleMain">Главная</string>
    <string name="menuTitleCategories">Каталог</string>
    <string name="menuTitleSearch">Поиск</string>
    <string name="menuTitleCart">Корзина</string>
    <string name="menuTitleProfile">Профиль</string>
    <string name="cameraPermissionPermanentlyDenied">Доступ к камере запрещен. Пожалуйста, перейдите в настройки в раздел Разрешения и предоставьте приложению доступ к камере</string>
    <string name="permissionDialogSettingsButton">Настройки</string>
    <string name="permissionDialogCancel">Отмена</string>
    <string name="cameraPermissionDenied">Доступ к камере запрещен</string>
    <string name="cameraPermissionNoCameraOnDevice">На устройстве отсутствует камера</string>
    <string name="toss">Регистрируясь, я принимаю Условия обслуживания и Политику конфиденциальности</string>
    <string name="expectSoonMock">Ожидайте в ближайшее время</string>
    <string name="recentlyViewedImageDescription">Иконка товара недавно просмотренных</string>
    <string name="mustNotBeEmpty">Текст не должен быть пустым</string>
    <string name="qrCodeLabel">Штрих код</string>
    <string name="cameraPermissionRationaleMessage">Разрешение на доступ к камере необходимо для сканирования QR кода</string>
    <string name="grantPermissionButton">Разрешить</string>
    <string name="closeButton">Закрыть</string>
    <string name="qrCodeDescription">Наведите камеру на штрих-код, что бы найти его в приложении</string>
    <string name="understandScan">Понятно! Сканировать</string>
    <string name="pointToBarcode">Наведите на штрих код</string>
    <string name="qrCodeDescriptionTop">Наведите камеру на штрих-код так, что бы он оказалася внутри прямоугольной области.</string>
    <string name="qrCodeDescriptionBottom">Сканер автоматически считает штрих-код и найдет товар, если он присутсвует в нашей сети.</string>
    <string name="qrCodeScannerError">Произошла ошибка сканирования кода</string>
    <string name="productImageDiffDescription">Внешний вид упаковки может отличаться от фотографии</string>
    <string name="menu_share">Share</string>
    <string name="productCategory">Категория</string>
    <string name="releaseForms">Формы выпуска :</string>
    <string name="tags">Теги :</string>
    <string name="productDescription">Описание :</string>
    <string name="instruction">Инструкция</string>
    <string name="instructionAttention">Перед употреблением, рекомендуем проконсультироваться с врачом и изучить инструкцию.</string>
    <string name="remainQuestions">Остались вопросы?</string>
    <string name="askPharmacist">Спроси фармацевта!</string>
    <string name="recommendedForYou">Рекомендуемое вам :</string>
    <string name="analoguesAndMain">Аналоги и основное действующее вещетсво</string>
    <string name="findInPharmacies">Найти в аптеках</string>
    <string name="temporaryUnavailable">Временно не доступен</string>
    <string name="devToolsLabel">DEV TOOLS</string>
    <string name="back_button">Back button</string>
    <string name="logo">Logo</string>
    <string name="clearName">Clear name</string>
    <string name="clearPhone">Clear phone</string>
    <string name="clearEmail">Clear email</string>
    <string name="facebookSignIn">Sign in via facebook</string>
    <string name="googleSignIn">Sign in via Google</string>
    <string name="sendCodeAgain">Отправить снова</string>
    <string name="myRegionTitle">Мой регион</string>
    <string name="notificationsTitle">Уведомления</string>
    <string name="aboutAppTitle">О приложении</string>
    <string name="needHelpTitle">Нужна помощь</string>
    <string name="profileImageDescription">Profile image</string>
    <string name="wishImageDescriptionProfile">Wish image description</string>
    <string name="wishProfile">Избранное</string>
    <string name="orderImageProfile">Order image</string>
    <string name="orderProfile">Заказы</string>
    <string name="analysesImageProfile">Analyses image</string>
    <string name="analysesProfile">Анализы</string>
    <string name="recipesImageProfile">Recipes image</string>
    <string name="recipesProfile">Рецепты</string>
    <string name="profileImage">Profile image</string>
    <string name="editProfileTitle">Настройки</string>
    <string name="save">Сохранить</string>
    <string name="profileTitle">Профиль</string>
    <string name="areYouSureToExit">Вы уверены, что хотите\nвыйти из приложения?</string>
    <string name="exitWithoutSaving">Вы уверены, что хотите\nвыйти не сохранив данные?</string>
    <string name="phoneHintProfile">@string/phoneHint</string>
    <string name="paymentsTitle">Оплата и бонусы</string>
    <string name="deliveryAddressTitle">Адрес доставки</string>
    <string name="logoutProfile">Выйти из аккаунта</string>
    <string name="pleaseAuthorizeMessage">Авторизируйтесь, чтобы совершать\nпокупки, получать бонусы и\nиспользовать чат с фармацевтом</string>
    <string name="authorizeAction">Авторизироваться</string>
    <string name="startSearching">Начните поиск</string>
    <string name="orderSubtitleHome">Вы можете использовать их при заказе доставки или самовывоз</string>
    <string name="askTitleHome">Онлайн\nКонсультации</string>
    <string name="analyzeTitleHome">Анализы и диагностика</string>
    <string name="mapTitleHome">IATA\nTravel Pass</string>
    <string name="categoriesTitleHome">Категории</string>
    <string name="seeAllCategoriesHome">Смотреть все</string>
    <string name="uploadRecipesHome">Мои рецепты</string>
    <string name="orderLogoContentDescriptionHome">Лого заказа</string>
    <string name="orderSmallIconContentDescriptionHome">Иконка заказа</string>
    <string name="askTileContentDescriptionHome">Спроси фармацевта</string>
    <string name="changePhotoGallery">Выбрать из галереи</string>
    <string name="changePhotoCamera">Сделать фото</string>
    <string name="changePhotoDelete">Удалить аватар</string>
    <string name="noteToOrder">Оставить комментарий</string>
    <string name="allChipOrders">Все</string>
    <string name="doneChipOrders">Выполнен</string>
    <string name="canceledChipOrders">Отменен</string>
    <string name="noGoodsFoundTitle">Ой, кажется такого товара\nнет в нашей базе</string>
    <string name="noGoodsFoundSubtitle">Повторите поиск или попробуйте\nнайти другой препарат</string>
    <string name="countProducts">Найдено %d товара(ов)</string>
    <string name="analyzesEmptyContainerAction">Записаться на анализы</string>
    <string name="analyzesEmptyContainerSubtitle">Это просто исправить! Запишитесь на анализы через наше приложение</string>
    <string name="analyzesEmptyContainerTitle">У Вас пока нет результатов анализов</string>
    <string name="wishEmptyContainerAction">Начать поиск</string>
    <string name="wishEmptyContainerSubtitle">Начните поиск, что бы добавить товар в корзину</string>
    <string name="wishEmptyContainerTitle">Вы пока не добавили товар в избранное</string>
    <string name="onboardingAuthTitle">Приступаем к покупкам</string>
    <string name="onboardingAuthAction">Авторизироваться</string>
    <string name="onboardingAuthSkip">Продолжить без регистрации</string>
    <string name="onboardingRegionTitle">Ваш город</string>
    <string name="onboardingRegionDescription">Выберите регион из списка доступных для актуального отображения контента</string>
    <string name="onboardingRegionActionText">Выбрать регион</string>
    <string name="howToOrder">Как заказать?</string>
    <string name="moneyback">Возврат</string>
    <string name="recipesHelp">Рецепты</string>
    <string name="payment">Оплата</string>
    <string name="deliveryHelp">Доставка</string>
    <string name="contact_us_description">Напишите нам Ваши пожелания или опишите с чем у Вас возникли проблемы.\n\nМы постараемся решить любой ваш вопрос!</string>
    <string name="contact_us_timing">Все запросы обрабатываються в течении 3 рабочих дней с момента подачи заявки</string>
    <string name="wishes_or_problems">Ваши пожелания или проблема:</string>
    <string name="send">Отправить</string>
</resources>