<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorGreyLight"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <com.pulse.ui.ProfileItemView
        android:id="@+id/itemOrderHelp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_12sdp"
        app:iconProfile="@drawable/ic_shopping_cart"
        app:titleProfile="@string/howToOrder" />

    <com.pulse.ui.ProfileItemView
        android:id="@+id/itemMoneybackHelp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_12sdp"
        app:iconProfile="@drawable/ic_double_arrow"
        app:titleProfile="@string/moneyback" />

    <com.pulse.ui.ProfileItemView
        android:id="@+id/itemRecipesHelp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_12sdp"
        app:iconProfile="@drawable/ic_recipes"
        app:titleProfile="@string/recipesHelp" />

    <com.pulse.ui.ProfileItemView
        android:id="@+id/itemPaymentHelp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_12sdp"
        app:iconProfile="@drawable/ic_credit_card"
        app:titleProfile="@string/payment" />

    <com.pulse.ui.ProfileItemView
        android:id="@+id/itemDeliveryHelp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_12sdp"
        app:iconProfile="@drawable/ic_delivery"
        app:titleProfile="@string/deliveryHelp" />

</LinearLayout>
