<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorGreyLight"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_analyzes"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:paddingHorizontal="@dimen/_12sdp"
        android:paddingVertical="@dimen/_16sdp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/item_analyze" />

    <com.pulse.ui.EmptyContainerView
        android:id="@+id/view_empty_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:buttonTextEmpty="@string/analyzesEmptyContainerAction"
        app:src="@drawable/ic_placeholder_analyzes"
        app:subtitleEmpty="@string/analyzesEmptyContainerSubtitle"
        app:titleEmpty="@string/analyzesEmptyContainerTitle" />

</LinearLayout>