<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.pulse.ui.EmptyContainerView
        android:id="@+id/generalInfoRegion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        app:buttonTextEmpty="@string/onboardingRegionActionText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias=".6"
        app:subtitleEmpty="@string/onboardingRegionSubtitle"
        app:titleEmpty="@string/onboardingRegionTitle" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvOnboardingSkipRegion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight=".1"
        android:background="@drawable/background_default_ripple_selector_rect"
        android:padding="@dimen/_6sdp"
        android:text="@string/skip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/generalInfoRegion" />

</androidx.constraintlayout.widget.ConstraintLayout>