<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        style="@style/NestedScrollStyle"
        android:background="@color/colorGreyLight">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/_15sdp">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/contact_us_description"
                android:textAppearance="?attr/textAppearanceBody1"
                android:textColor="@color/darkBlue" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/mtv_note_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_32sdp"
                android:text="@string/wishes_or_problems"
                android:textAppearance="?attr/textAppearanceButton" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_note"
                style="@style/TextInputStyle"
                android:layout_marginTop="@dimen/_16sdp"
                app:endIconMode="clear_text"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start|top"
                    android:hint="@string/noteToOrder"
                    android:imeOptions="actionNext"
                    android:inputType="textCapSentences|textMultiLine"
                    android:minLines="2"
                    android:textAppearance="?attr/textAppearanceBody2" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/mb_send_request"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_48sdp"
                android:layout_marginTop="@dimen/_64sdp"
                android:backgroundTint="@color/primaryBlue"
                android:gravity="center"
                android:text="@string/send"
                android:textAppearance="?attr/textAppearanceButton"
                android:textColor="@color/colorGlobalWhite"
                app:cornerRadius="@dimen/_20sdp" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16sdp"
                android:gravity="center"
                android:text="@string/contact_us_timing"
                android:textAppearance="?attr/textAppearanceOverline"
                android:textColor="@color/greyText" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>