<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorSearchBackground">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"
        android:layoutDirection="locale" />

    <com.pulse.ui.EmptyContainerView
        android:id="@+id/llDrugsNotFoundContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorGlobalWhite"
        android:visibility="gone"
        app:isButtonVisible="false"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:subtitleEmpty="@string/noGoodsFoundSubtitle"
        app:titleEmpty="@string/noGoodsFoundTitle" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvSearchResult"
        style="@style/Text.Filled"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16sdp"
        android:paddingTop="@dimen/_15sdp"
        android:paddingBottom="@dimen/_15sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        tools:text="@string/countProducts" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvProducts"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:paddingBottom="@dimen/_8sdp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSearchResult"
        tools:listitem="@layout/item_product" />

</androidx.constraintlayout.widget.ConstraintLayout>