<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/greyLight"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"
        android:layoutDirection="locale" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/cgState"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginBottom="@dimen/_4sdp"
        app:checkedChip="@id/chipMyAll"
        app:chipSpacingHorizontal="@dimen/_6sdp"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/chipMyAll"
            style="@style/ChipOrders"
            android:text="@string/allChipOrders" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipMyInProcess"
            style="@style/ChipOrders"
            android:text="@string/inProcessChipOrders" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipMyDone"
            style="@style/ChipOrders"
            android:text="@string/doneChipOrders" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipMyCanceled"
            style="@style/ChipOrders"
            android:text="@string/canceledChipOrders" />

    </com.google.android.material.chip.ChipGroup>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvOrdersList"
        style="@style/Recycler"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/layout_my_order_item" />
</LinearLayout>