<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorGlobalWhite"
    android:paddingBottom="@dimen/_12sdp"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <TextView
        android:id="@+id/change_photo_bottom_sheet_gallery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_28sdp"
        android:background="@drawable/background_default_ripple_selector_rect"
        android:padding="@dimen/_12sdp"
        android:text="@string/changePhotoGallery"
        android:textSize="@dimen/_11ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/change_photo_bottom_sheet_camera"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_28sdp"
        android:background="@drawable/background_default_ripple_selector_rect"
        android:padding="@dimen/_12sdp"
        android:text="@string/changePhotoCamera"
        android:textSize="@dimen/_11ssp"
        app:layout_constraintTop_toBottomOf="@id/change_photo_bottom_sheet_gallery" />

    <TextView
        android:id="@+id/change_photo_bottom_sheet_delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_28sdp"
        android:background="@drawable/background_default_ripple_selector_rect"
        android:padding="@dimen/_12sdp"
        android:text="@string/changePhotoDelete"
        android:textSize="@dimen/_11ssp"
        app:layout_constraintTop_toBottomOf="@id/change_photo_bottom_sheet_camera" />

</androidx.constraintlayout.widget.ConstraintLayout>
