<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorGreyLight"
    android:padding="@dimen/_16sdp">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_picture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_60sdp"
        app:layout_constraintBottom_toTopOf="@+id/mtv_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:src="@drawable/ic_onboarding_region" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/mtv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_6sdp"
        android:textAppearance="?attr/textAppearanceHeadline5"
        android:textColor="@color/darkBlue"
        app:layout_constraintBottom_toTopOf="@+id/mtv_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="@string/onboardingRegionTitle" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/mtv_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_42sdp"
        android:gravity="center"
        android:textAppearance="?attr/textAppearanceBody1"
        android:textColor="@color/darkBlue"
        app:layout_constraintBottom_toTopOf="@+id/mb_next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="@string/onboardingRegionDescription" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/mb_next"
        style="@style/BaseButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_24sdp"
        android:backgroundTint="@color/primaryBlue"
        android:textAppearance="?attr/textAppearanceButton"
        app:layout_constraintBottom_toTopOf="@+id/mtv_skip"
        tools:text="@string/onboardingRegionActionText" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/mtv_skip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_8sdp"
        android:background="@drawable/background_default_ripple_selector_rect"
        android:padding="@dimen/_6sdp"
        android:textAppearance="?attr/textAppearanceBody2"
        android:textColor="@color/grey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="@string/skip" />

</androidx.constraintlayout.widget.ConstraintLayout>